--- a/smartstore/build.gradle
+++ b/smartstore/build.gradle
@@ -13,6 +13,8 @@ repositories {
 }
 
 dependencies {
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'org.mindrot:jbcrypt:0.4'
