--- a/smartstore/.gitignore
+++ b/smartstore/.gitignore
@@ -22,11 +22,11 @@ bin/
 *.iws
 *.iml
 *.ipr
+*.properties
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 gradle
-
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
